--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,15 @@
 
 body {
   margin: 0;
+  padding:  1rem;
   font-family: "Work Sans", -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #1D1E22;
+  color: white;
+
 }
 
 code {
@@ -24,6 +28,16 @@ code {
   max-width: 1200px;
   margin: 0 auto;
 }
+.text-glow {
+  text-shadow: 0 0 80px rgb(192 219 255 / 35%), 0 0 32px rgb(65 120 255 / 24%);
+}
+
+.text-gradient {
+  background: linear-gradient(to right, #30CFD0, #c43ad6);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 
 /* ------------------------------------------------------ */
 /* -- Navigation -- */
@@ -119,12 +133,23 @@ code {
 }
 
 .projects__card {
+  display: flex;
+  flex-direction: column;
+
+
+  height:  420px;
   max-width: 350px;
 
   padding: 20px;
 
-  border: 1px solid #0088BB;
+  border: 1px solid white;
   border-radius: 8px;
+
+  transition: 0.4s ease-out;
+}
+
+.projects__card:hover {
+  height: 520px;
 }
 
 .projects__card h3 {
@@ -140,16 +165,32 @@ code {
 
 .projects__card img {
   width: 100%;
-  height: auto;
+  max-height: 150px;
   margin: 20px 0 10px;
 
   border-radius: 8px;
 }
 
 .projects__card .button {
-  margin: 10px 5px 0;
+  max-width: 150px;
+  margin: 10px 10px 0;
 }
 
+.project__links{
+  padding: 0px 40px;
+}
+
+.hidden-content{
+  visibility: hidden;
+  transition: 0.2s cubic-bezier(1,0.1,0,1);
+  opacity:  0;
+}
+
+.projects__card:hover .hidden-content{
+  margin-top: 30px;
+  visibility: visible;
+  opacity: 1;
+}
 /* ------------------------------------------------------ */
 /* -- Education/Experience -- */
 
@@ -190,26 +231,25 @@ code {
 /* ------------------------------------------------------ */
 /* -- HTML COMPONENTS: BUTTON -- */
 .button {
+  font-family: 'DM Sans', sans-serif;
+  font-size: 18px;
   display: inline-block;
-
-  background: #12BDF3;
-
-  padding: 15px 50px;
-
-  border: none;
-  border-radius: 8px;
-
-  font-family: "Work Sans";
-  font-size: 16px;
-  font-weight: 700;
+  text-align: center;
   text-decoration: none;
-
+  padding: 12px 24px;
+  max-width: 200px;
+  margin: 1rem;
   cursor: pointer;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  border-radius: 50px;
 
-  transition: all 250ms ease;
+  background-image: linear-gradient(to right, rgb(1 134 218), rgb(182 49 167));
+  border: 0;
+  color: rgba(var(--text-color));
 }
 
 .button:hover {
-  background: #0088BB;
-  color: #FFFFFF;
+    transition: all 0.3s ease;
+    box-shadow: rgba(111, 76, 255, 0.5) 0px 0px 20px 0px;
 }
